--- a/Fraud_Detection.ipynb
+++ b/Fraud_Detection.ipynb
@@ -329,11 +329,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -368,6 +363,22 @@
     "\n",
     "# Show the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Log Distance from Home by Fraud Status\n",
+    "\n",
+    "This histogram shows the distribution of the logarithm of distances from home for transactions, differentiated by fraud status.\n",
+    "\n",
+    "Observations:\n",
+    "- **Central Tendency**: Most transactions, both fraudulent and non-fraudulent, occur within a similar range of log distance from home, centered around zero.\n",
+    "- **Fraudulent Transactions**: Transactions marked as fraud have a narrower distribution, suggesting that fraudulent activities might occur within a more constrained range of distances.\n",
+    "- **Non-Fraudulent Transactions**: The non-fraudulent transactions show a wider spread, which could indicate regular transactional behavior over a variety of distances.\n",
+    "\n",
+    "This pattern could imply that the distance from home is not a definitive indicator of fraud but may still provide useful context in a broader fraud detection analysis.\n"
    ]
   },
   {
