--- a/Fraud_Detection.ipynb
+++ b/Fraud_Detection.ipynb
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#_ Apply log transformation\n",
+    "#_Apply log transformation as data is extremely skewed and visualization made from it will not provide any relevent information.\n",
     "df_credit_fraud['log_distance_from_home'] = np.log(df_credit_fraud['distance_from_home'])\n",
     "df_credit_fraud['log_distance_from_last_transaction'] = np.log(df_credit_fraud['distance_from_last_transaction'])\n",
     "df_credit_fraud['log_ratio_to_median_purchase_price'] = np.log(df_credit_fraud['ratio_to_median_purchase_price'])"
@@ -419,6 +419,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Log Distance from Last Transaction by Fraud Status\n",
+    "\n",
+    "This histogram illustrates the distribution of the log-transformed distance from the last transaction, categorized by fraud status.\n",
+    "\n",
+    "Observations:\n",
+    "- **Central Concentration**: The bulk of both fraudulent and non-fraudulent transactions are centered around a log distance of zero, implying most transactions occur at a similar distance from the previous one.\n",
+    "- **Distribution of Fraud**: Fraudulent transactions have a narrower distribution, suggesting a pattern that fraudulent activities may happen within a predictable range from the last transaction.\n",
+    "- **Wider Non-Fraud Distribution**: Non-fraudulent transactions show a broader distribution, indicating a more varied behavior in legitimate transaction distances.\n",
+    "\n",
+    "This pattern may suggest that while transaction distance alone is not a definitive fraud indicator, it can contribute to a fraud detection algorithm as one of several factors.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -455,18 +471,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Log Ratio to Median Purchase Price by Fraud Status\n",
+    "\n",
+    "This histogram represents the log-transformed ratio of transaction amounts to the median purchase price, separated by fraud status.\n",
+    "\n",
+    "Observations:\n",
+    "- **Concentration of Non-Fraudulent Transactions**: A significant number of legitimate transactions cluster around the median purchase price (log ratio of 0), which is expected in typical spending behavior.\n",
+    "- **Fraudulent Transactions**: Fraudulent transactions have a presence across a wider range of log ratio values, including some transactions significantly higher or lower than the median purchase price.\n",
+    "- **Potential Anomaly Identification**: The broader spread of the fraudulent transactions could indicate that transactions far from the median purchase price may be more susceptible to being fraudulent.\n",
+    "\n",
+    "This visualization suggests that while most non-fraudulent transactions conform to a typical spending pattern, those that deviate substantially could warrant further investigation for fraud.\n"
+   ]
   }
  ],
  "metadata": {
